--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,8 +14,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Custom Search Engine (CSE) in Node.js with Google APIs">
-  <meta name="keywords" content="cse, googleapis, node.js, custom search engine, google api, heroku, herokuapp">
+  <meta name="description" content="Trang tìm kiếm link tải Fshare nhanh chóng, chính xác">
+  <meta name="keywords" content="tai fshare, timfshare, tim link tai fshare, tim kiem link fshare, tim link tai phim, tim link tai">
   <title>
     <%= title %>
   </title>
