--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@ body {
 	font-size: 16px;
 	font-family: 'Quicksand', sans-serif;
 	margin: auto;
-	width: 95%;
+	width: 90%;
 	padding-top: 30px;
 	padding-bottom: 30px;
 }
@@ -21,8 +21,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 900;
 }
 .top-detail{
-	margin-left: 40%;
-	margin-top: 0.5%;
+	font-size: 15px;
 }
 
 .top-detail a:hover {
@@ -31,35 +30,28 @@ h1, h2, h3, h4, h5, h6 {
 
 .wrap-search {
 	position: relative;
-	
+	margin-top: 300px;
 }
 .wrap-search input {
 	position: relative;
 	box-sizing : border-box;
-	width: 70%;
+	width: 100%;
 	z-index: 0;
-	display: inline-block;
-	padding: 8px 9%;
+	padding: 8px 90px;
 	border-radius: 50px;
 	border: 2px solid rgb(88, 88, 88);
 	outline: none;
 	font-size: 15px;
 	font-family: 'Quicksand', sans-serif;
-	margin-top: 25%;
-	margin-left: 15%;
 }
 
 
 .wrap-search img {
 	position: absolute;
-	top: 95%;
-	right: 16%;
-	transform: translate(0, -50%);
+    right: 2%;
 	width: 20px;
-	height: 20px;
-	cursor: pointer;
-	/* margin-top: 25px; */
-
+	z-index: 1;
+	margin-top: 10px ;
 
 }
 .wrap-search img.close {
@@ -109,9 +101,7 @@ h1, h2, h3, h4, h5, h6 {
 .wrap-content ul {
 	padding-left: 10px;
 	padding-right: 10px;	
-	width: 50%;
-	float: left;
-	margin-left: 11%;				
+	margin-left: 3%;			
 }
 .wrap-content li.total {
 	color: rgb(88, 88, 88);
@@ -140,8 +130,6 @@ h1, h2, h3, h4, h5, h6 {
 .wrap-recommendlink ul {
 	padding-left: 20px;
 	padding-right: 20px;
-	width: 30%;
-	float: right;
 	display: none;
 	visibility: hidden;
 	/* margin-top: 2%; */
@@ -191,8 +179,6 @@ h1, h2, h3, h4, h5, h6 {
 .wrap-recommendkey ul {
 	padding-left: 20px;
 	padding-right: 20px;
-	width: 30%;
-	float: right;
 	display: none;
 	visibility: hidden;
 	/* margin-top: 2%; */
@@ -247,12 +233,10 @@ img.cse {
 }
 
 img.logo {
-	position: fixed;
-	left: 50%;
-	top: 35%;
-	transform: translate(-50%, -50%);
-	width: 25%;
-
+	position: absolute ;
+	width: 30%;
+	top: 50%;
+	margin-top: 200px;
 }
 
 .page {
@@ -292,32 +276,23 @@ img.logo {
 }
 
 .dropdown {
-	margin: 0 20px;
-	vertical-align: top;
+
+	
   }
   
   .dropdown {
 	display: inline-block;
-	position: absolute;
-	z-index: 1;
-	overflow: hidden;
-	height: 39px;
-	width: 8%;
-	background: #ffffff;	
-	/* padding: 8px 20px; */
-	border-radius: 50px;
-	border: 2px solid rgb(88, 88, 88);
-	outline: none;
-	font-size: 15px;
-	/* background-image: -webkit-linear-gradient(top, transparent, rgba(0, 0, 0, 0.06));
-	background-image: -moz-linear-gradient(top, transparent, rgba(0, 0, 0, 0.06));
-	background-image: -o-linear-gradient(top, transparent, rgba(0, 0, 0, 0.06));
-	background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.06));
-	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
-	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08); */
-	margin-top: 25%;
-	margin-left: 15%;
-	background: rgb(250, 250, 250);
+    position: absolute;
+    z-index: 1;
+    overflow: hidden;
+	background: #ffffff;
+	width: 85px;
+    /* padding: 8px 20px; */
+    border-radius: 50px;
+    border: 2px solid rgb(88, 88, 88);
+    outline: none;
+    font-size: 15px;
+    background: rgb(250, 250, 250);
   }
   
   .dropdown:before, .dropdown:after {
