--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -6268,6 +6268,10 @@ textarea.form-control-lg {
   left: 10% !important;
 }
 
+.start-25 {
+  left: 25% !important;
+}
+
 .start-50 {
   left: 50% !important;
 }
