--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,8 +20,18 @@ ul {
 h1, h2, h3, h4, h5, h6 {
 	font-weight: 900;
 }
+#icon-search{
+	position: absolute;
+    right: 2%;
+	width: 20px;
+	z-index: 1;
+	margin-top: 10px ;
+}
+
 .top-detail{
 	font-size: 15px;
+	margin-top: 10px;
+	text-align: center;
 }
 
 .top-detail a:hover {
@@ -360,9 +370,41 @@ img.logo {
 	
 }
 
+img.mlogo {
+	position: absolute ;
+	width: 50%;
+	top: 50%;
+	margin-top: 200px;
+	
+}
+
+/* img.logo{
+	padding: 12px 0px;
+	position: absolute ;
+	width: 30%;
+	top: 50%;
+	margin-top: 200px;
+} */
+
+/* #logoout{
+	text-align: center;
+	position: absolute ;
+	width: 100%;
+	top: 50%;
+	margin-top: 200px;
+} */
+
 img.logoin {
 	position: relative ;
 	width: 80%;
+	margin-top: 5px;
+	margin-bottom: 25px;
+	display: none;
+	visibility:hidden;
+}
+img.mlogoin {
+	position: relative ;
+	width: 50%;
 	margin-top: 5px;
 	margin-bottom: 25px;
 	display: none;
