--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
               </select>
             </div>
             <input autocomplete="off" type="text" placeholder="Nhập vào từ khóa..." id="input-search" name="s">
-            <button type="submit" id="icon-search" style="border: unset !important;"> <i class="fas fa-search"></i>
+            <button class="fas fa-search"  aria-hidden="true" type="submit" id="icon-search" style="border: unset !important;">
             </button>
           </form>
         </div>
@@ -79,7 +79,6 @@
       <div class="col-xl-10">
         <div class="wrap-search-in">
           <form action="/" method="get">
-            <div class=""><img src="/images/search.png" type="submit" alt="Submit" class="search" id="img-search"></div>
             <div class="dropdown" id="cusSelectbox">
               <select name="site" class="dropdown-select" id="cusSelectboxValue">
                 <option value="">Tất cả</option>
@@ -89,7 +88,7 @@
               </select>
             </div>
             <input autocomplete="off" type="text" placeholder="Nhập vào từ khóa..." id="input-search-in" name="s">
-            <button type="submit" id="icon-search" style="border: unset !important;" > <i class="fas fa-search"></i>
+            <button class="fas fa-search"  aria-hidden="true" type="submit" id="icon-search" style="border: unset !important;" >
             </button>
           </form>
         </div>
