--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,11 +22,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 #icon-search{
 	position: absolute;
-    right: 30%;
+    right: 2%;
 	width: 20px;
 	z-index: 1;
 	margin-top: 10px ;
-	margin-right: 100px ;
+	/* margin-right: 100px ; */
 }
 
 .top-detail{
