--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,8 @@
               </select>
             </div>
             <input autocomplete="off" type="text" placeholder="Nhập vào từ khóa..." id="input-search-in" name="s">
-            <button class="fas fa-search"  aria-hidden="true" type="submit" id="icon-search" style="border: unset !important;" >
+            <button aria-hidden="true" type="submit" id="icon-search"  >
+              <i class="fas fa-search"></i>
             </button>
           </form>
         </div>
