--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@
           <form action="/" method="get">
             <!-- <div class=""><img src="/images/search.png" type="submit" alt="Submit" class="search" id="img-search"></div> -->
             <div class="dropdown" id="cusSelectbox">
-              <select name="site" class="dropdown-select" id="cusSelectboxValue">
+              <select name="site" class="dropdown-select" id="cusSelectboxValue" style="outline: none;">
                 <option value="">Tất cả</option>
                 <option value="fshare">Fshare</option>
                 <option value="hdvietnam">HDvietnam</option>
